# PED_solver_FEM

./: CMakeLists.txt  main.cpp
general/graphics/: vao.h
solver/: femmesh.cpp  femmesh.h  quadedge.cpp  quadedge.h  quadtree.cpp  quadtree.h  solver.cpp
